quickstart/patches/dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dashboard
  name: dashboard
  namespace: $(NS_BOBBYCAR)
spec:
  host: dashboard-bobbycar.$(OCP_DOMAIN)
